<resources>
    <string name="app_name">Suit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_account">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_password_makeSure">请确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register_in">注册</string>
    <string name="prompt_register">注册账号</string>
    <string name="prompt_forgot">忘记密码</string>

</resources>
